--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+    
+  google_fonts: ^6.1.0
+  table_calendar: ^3.0.9
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   provider: ^6.1.0
-
+  fl_chart: ^0.66.1 
+  flutter_staggered_grid_view: ^0.6.2
+  http: ^1.2.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
